Adicionando a data no processamento